--- a/Problem2_File_Recursion.ipynb
+++ b/Problem2_File_Recursion.ipynb
@@ -1,11 +1,82 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  Finding Files\n",
+    "\n",
+    "For this problem, the goal is to write code for finding all files under a directory (and all directories beneath it) that end with \".c\""
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os \n",
+    "\n",
+    "def find_files(suffix, path):\n",
+    "    \"\"\"\n",
+    "    Find all files beneath path with file name suffix.\n",
+    "\n",
+    "    Note that a path may contain further subdirectories\n",
+    "    and those subdirectories may also contain further subdirectories.\n",
+    "\n",
+    "    There are no limit to the depth of the subdirectories can be.\n",
+    "\n",
+    "    Args:\n",
+    "      suffix(str): suffix if the file name to be found\n",
+    "      path(str): path of the file system\n",
+    "\n",
+    "    Returns:\n",
+    "       a list of paths\n",
+    "    \"\"\"\n",
+    " \n",
+    "    found_list = []\n",
+    "    \n",
+    "    items = os.listdir(path)    \n",
+    "    for item in items: \n",
+    "        \n",
+    "        item_path = path+'/'+item\n",
+    "    \n",
+    "        if os.path.isfile(item_path):\n",
+    "            if item.endswith(suffix):\n",
+    "                found_list.append(item_path)\n",
+    "        else:\n",
+    "            list_to_add = find_files(suffix, item_path)\n",
+    "            if len(list_to_add) > 0: \n",
+    "                found_list.extend(list_to_add) \n",
+    "\n",
+    "    return found_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['./testdir/subdir1/a.c',\n",
+       " './testdir/subdir3/subsubdir1/b.c',\n",
+       " './testdir/subdir5/a.c',\n",
+       " './testdir/t1.c']"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "suffix = 'c'\n",
+    "path = './testdir'\n",
+    "\n",
+    "find_files(suffix, path)"
+   ]
   }
  ],
  "metadata": {
