--- a/Problem4_Active_Directory.ipynb
+++ b/Problem4_Active_Directory.ipynb
@@ -115,7 +115,9 @@
    "source": [
     "## Comment \n",
     "\n",
-    "Just used recurrsive algorithm since the depth is unknown. The efficiency is O(n) where n is number of groups and users"
+    "Used recurrsive algorithm since the depth is unknown. \n",
+    "Memory efficiency is O(m) where m is the number of tree depth.\n",
+    "Time efficiency is O(n) where n is the number of users"
    ]
   },
   {
