--- a/Problem3_Huffman_Coding.ipynb
+++ b/Problem3_Huffman_Coding.ipynb
@@ -311,7 +311,7 @@
    "source": [
     "##  Comment\n",
     "\n",
-    "Huffman coding is good for compressing, but it seems the efficiency is not so much efficient. It is O(n), since it is needed to search all the nodes in worst cases. "
+    "Huffman coding is good for compressing, but it seems the efficiency is not so much efficient. It is O(n log(n)) since there is need of sorting at the beginning."
    ]
   },
   {
