--- a/Problem4_Active_Directory.ipynb
+++ b/Problem4_Active_Directory.ipynb
@@ -116,7 +116,7 @@
     "## Comment \n",
     "\n",
     "Used recurrsive algorithm since the depth is unknown. \n",
-    "Memory efficiency is O(m) where m is the number of tree depth.\n",
+    "Memory efficiency is O(m) where m is the number of groups.\n",
     "Time efficiency is O(n) where n is the number of users"
    ]
   },
